Fix checkbox alignment in join-us.html. Update to readme and final code formatting.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,6 @@ body {
   font-family: var(--primary-font);
   color: var(--main-brand);
 }
-
 h1,
 h2,
 h3 {
@@ -40,7 +39,7 @@ h3 {
 .custom-button-outline {
   border: 3px solid var(--accent-dark);
   background-color: var(--shades-light);
-  color: var(--accent-dark); 
+  color: var(--accent-dark);
 }
 .custom-button-outline:hover {
   border: 3px solid var(--accent-dark);
@@ -50,38 +49,38 @@ h3 {
 
 /* Navigation styles */
 nav {
-    background-color: var(--main-brand);
-    color: var(--shades-light);
-    box-shadow: 0.1rem 0.3rem var(--shades-dark);
-  }
-  nav:hover {
-    color: var(--accent-light);
-  }
-  /* Override boostrap class to make menu dropdown right aligned */
-  .navbar-collapse {
-    margin: 0 auto;
-    text-align: right;
-  }
-   /* less rounded buttons to match logo */
-   nav .custom-button-filled,
-   nav .custom-button-filled:hover {
-   border-radius:0.2rem;
-   }
+  background-color: var(--main-brand);
+  color: var(--shades-light);
+  box-shadow: 0.1rem 0.3rem var(--shades-dark);
+}
+nav:hover {
+  color: var(--accent-light);
+}
+/* Override boostrap class to make menu dropdown right aligned */
+.navbar-collapse {
+  margin: 0 auto;
+  text-align: right;
+}
+/* less rounded buttons to match logo */
+nav .custom-button-filled,
+nav .custom-button-filled:hover {
+  border-radius: 0.2rem;
+}
 
 /* Header styles */
 #header {
-    background: url("../images/sunset-mx-riders-ai.png") top / cover no-repeat;
-    font-size: 1.2rem;
-  }
-  /* add a semi-transparent background to the header row so that the darker text is legible against the background image */
-  #header .row {
-    background-color: rgba(240, 242, 242, 0.65);    
-    text-shadow: 1px 1px var(--accent-light);
-    padding-top:0.5rem;
-  }
-  #header img {
-    border: var(--accent-light) inset 5px;
-  }
+  background: url("../images/sunset-mx-riders-ai.png") top / cover no-repeat;
+  font-size: 1.2rem;
+}
+/* add a semi-transparent background to the header row so that the darker text is legible against the background image */
+#header .row {
+  background-color: rgba(240, 242, 242, 0.65);
+  text-shadow: 1px 1px var(--accent-light);
+  padding-top: 0.5rem;
+}
+#header img {
+  border: var(--accent-light) inset 5px;
+}
 
 /* Main section */
 #info {
@@ -91,51 +90,55 @@ nav {
 }
 #member-form {
   /* apply semi-transparent background to form */
-  background-color: rgba(240, 242, 242, 0.65);   
+  background-color: rgba(240, 242, 242, 0.65);
+}
+/* Adjust margin to line up check box with other input boxes */
+#member-form .form-check {
+  margin-left: 0.75rem;
 }
 /* Change the text link colours in this section only */
 #info a:link {
-    color:var(--shades-dark)
+  color: var(--shades-dark);
 }
 #info a:visited {
-    color: var(--main-brand);
+  color: var(--main-brand);
 }
 /* mouse over effect */
 #info a:hover {
-    color: var(--accent-dark);
-    font-weight: bold;
+  color: var(--accent-dark);
+  font-weight: bold;
 }
 /* form submission confirmation links box */
 #links-box {
-    border:var(--main-brand) solid 0.4rem;
-    padding: 3%;
+  border: var(--main-brand) solid 0.4rem;
+  padding: 3%;
 }
 #links-box a {
-    border: var(--main-brand) solid 1px;
-    margin: 3%;
+  border: var(--main-brand) solid 1px;
+  margin: 3%;
 }
+
 /* Results page styles */
 /* min-height to make section stretch towards footer section */
 #results {
-    min-height: 52vh;
-    background-color: rgba(240, 242, 242, 0.65);
-    
+  min-height: 52vh;
+  background-color: rgba(240, 242, 242, 0.65);
 }
 #results .row {
-    justify-content: center;
+  justify-content: center;
 }
 /* add some vertical space between cards */
 #results .card {
-    margin: 0 auto 1.5rem;
-    border: var(--main-brand) solid 1px; 
+  margin: 0 auto 1.5rem;
+  border: var(--main-brand) solid 1px;
 }
 #results .card-title {
-    font-family: var(--secondary-font);
-    font-size:1.5rem;
+  font-family: var(--secondary-font);
+  font-size: 1.5rem;
 }
 #results .card-body {
-    color: var(--main-brand);
-    background-color: var(--shades-light);
+  color: var(--main-brand);
+  background-color: var(--shades-light);
 }
 
 /* Footer / contact */
@@ -151,28 +154,27 @@ nav {
   color: var(--shades-light);
 }
 #contact .social-links i {
-    color: var(--shades-light);
-    font-size: 1.8rem;
-    transition: color 0.4s ease-in-out;
-    padding-right:0.2rem;
-  }
+  color: var(--shades-light);
+  font-size: 1.8rem;
+  transition: color 0.4s ease-in-out;
+  padding-right: 0.2rem;
+}
 #contact .social-links i:hover {
-    color: var(--accent-light);
-  }
+  color: var(--accent-light);
+}
 
 /* Media Queries */
 /* Add a body background image to screens above 576px wide (bootstrap sm breakpoint) */
 @media screen and (min-width: 576px) {
   body {
     /* here we are using layered backgrounds to effectively darken the background by 50% */
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-     url("../images/mx-track-above-ai.jpg") top / cover no-repeat;
-   
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../images/mx-track-above-ai.jpg") top / cover no-repeat;
   }
 }
 /* space out nav links a little on larger screens  */
 @media screen and (min-width: 992px) {
-    .navbar-nav > a {
-        margin-right:0.2rem;
-    }
+  .navbar-nav > a {
+    margin-right: 0.2rem;
+  }
 }
